--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.10",
+    "express": "^4.16.3",
     "graphql": "^0.13.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
@@ -19,6 +20,7 @@
     "styled-is": "^1.1.3"
   },
   "scripts": {
+    "now-start": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
