--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.10",
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "react": "^16.4.1",
@@ -20,8 +21,8 @@
     "styled-is": "^1.1.3"
   },
   "scripts": {
-    "now-start": "node server.js",
-    "start": "react-scripts start",
+    "now-start": "NODE_ENV=prod node server.js",
+    "start": "NODE_ENV=dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "posttest": "npm run format",
