--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,11 @@
     "now-start": "NODE_ENV=prod node server.js",
     "start": "NODE_ENV=dev react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "posttest": "npm run format",
+    "pretest": "npm run format",
+    "test": "npm run lint",
     "eject": "react-scripts eject",
-    "format": "prettier --write '**/*.{js,css,md}'"
+    "format": "prettier --write '**/*.{js,css,md}'",
+    "lint": "eslint . --cache --fix"
   },
   "browserslist": {
     "development": [
@@ -40,5 +41,15 @@
       "not op_mini all",
       "ie 11"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "prettier": "^1.13.7"
   }
 }
